@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_02-dev
 
+Apache::StatINC can now be configured to write debug stuff with
+a PerlSetVar [Ask Bjoern Hansen <ask@netcetera.dk>]
+
 perl_startup() will now check the Apache.pm $VERSION
 
 fixups for building Stronghold 2.4
